# lantern

./: README.md  pyproject.toml
src/lantern/: main.py
src/lantern/templates/: chat.html
